--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2025.05. GigaGAN is referred as the one of the most cited paper in 2023 by Stanford's AI Index Report (<a href="https://youtu.be/LfYotFKR0QI?si=yI98bhtVxMqlHrmg&t=161">Korean Youtube</a>)
+				</li>
+				<li class="list-group-item">
 					2025.04. Open3D is featured in <a href="https://www.oreilly.com/library/view/3d-data-science/9781098161323/" target="_blank">3D Data Science with Python</a> book published by O'Reilly Media (<a href="https://www.amazon.com/_/dp/1098161335?smid=ATVPDKIKX0DER&_encoding=UTF8&tag=oreilly20-20>" target="_blank">Buy at Amazon</a>).
 				</li>
 				<li class="list-group-item">
@@ -88,15 +91,15 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2024.11. I will serve as an Action Editor for Transactions on Machine Learning Research (<b>TMLR</b>).
 				</li>
-				<li class="list-group-item">
-					2024.11. I will serve as a Lead Area Chair for <b>CVPR 2025</b>.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2024.11. I will serve as a Lead Area Chair for <b>CVPR 2025</b>.
+					</li>
 					<li class="list-group-item">
 						2024.09. I will serve as an Area Chair for <b>ICLR 2025</b>.
 					</li>
