--- a/data/news.html
+++ b/data/news.html
@@ -1,3 +1,4 @@
+2025.05. GigaGAN is referred as the one of the most cited paper in 2023 by Stanford's AI Index Report (<a href="https://youtu.be/LfYotFKR0QI?si=yI98bhtVxMqlHrmg&t=161">Korean Youtube</a>)
 2025.04. Open3D is featured in <a href="https://www.oreilly.com/library/view/3d-data-science/9781098161323/" target="_blank">3D Data Science with Python</a> book published by O'Reilly Media (<a href="https://www.amazon.com/_/dp/1098161335?smid=ATVPDKIKX0DER&_encoding=UTF8&tag=oreilly20-20>" target="_blank">Buy at Amazon</a>).
 2025.02. Three papers about dynamic scene reconstruction and image generation are accepted to <b>CVPR 2025</b>.
 2025.02. A paper about point cloud registration is accepted to <b>ICRA 2025</b>.
