--- a/lab.html
+++ b/lab.html
@@ -163,7 +163,9 @@
 			<img src="source/members/daneul.jpeg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://carpedkm.github.io/" target="_blank">Daneul Kim</a></h5>
 			2023 Fall - current<br>
-			Master's student<br>
+			MS degree<br>
+			2025 Fall - current<br>
+			Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/hyunjoon.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
@@ -190,13 +192,6 @@
 			Integrated Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/milo.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
-			<h5><a href="https://github.com/MiloDeroussi" target="_blank">Milo Deroussi</a></h5>
-			2024 Fall - current<br>
-			Exchange master's student<br>
-			Télécom SudParis<br>
-		</div>
-		<div class="col-md-3 text-center">
 			<img src="source/members/youngjoong.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://revsic.github.io/" target="_blank">YoungJoong Kim</a></h5>
 			2025 Spring - current<br>
@@ -206,6 +201,18 @@
 			<img src="source/members/daeun.jpeg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5>Daeun Lee</h5>
 			2025 Spring - current<br>
+			Master's student<br>
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/minkyun.jpeg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
+			<h5>Minkyun Seo</h5>
+			2025 Fall - current<br>
+			Integrated Ph.D. student<br>
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/jaeyun.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
+			<h5>Jaeyun Jung</h5>
+			2025 Fall - current<br>
 			Master's student<br>
 		</div>
 	</div>
@@ -232,6 +239,7 @@
 			<h5><a href="https://yeon07.github.io/" target="_blank">Seoyeon Kim</a></h5>
 			2022 Fall - 2024 Spring<br>
 			MS degree (POSTECH)<br>
+			Pursuing Ph.D.<br>
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
