--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,33 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kim_MetropolisHastings_arXiv_2025">
+			<img src="publications/data/25_arxiv6.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Metropolis-Hastings Sampling for 3D Gaussian Reconstruction</h4>
+			<p class="text-muted">
+				Hyunjin Kim, Haebeom Jung, and <b>Jaesik Park</b>.
+				<em>2506.12945 (arXiv), 2025</em>
+			</p>
+			<p>
+				<a href="https://hjhyunjinkim.github.io/MH-3DGS" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2506.12945" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_MetropolisHastings_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_MetropolisHastings_arXiv_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_MetropolisHastings_arXiv_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kim_MetropolisHastings_arXiv_2025,<br>
+							Title={Metropolis-Hastings Sampling for 3D Gaussian Reconstruction},<br>
+							Author={Hyunjin Kim and Haebeom Jung and Jaesik Park},<br>
+							Journal={2506.12945 (arXiv)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Jung_Targetless_arXiv_2025">
 			<img src="publications/data/25_arxiv4.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Targetless LiDAR-Camera Calibration with Anchored 3D Gaussians</h4>
