ICCV papers accepted

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2025.06. Three papers about feature field reconstruction, 3D registration, and text-based image editing are accepted to <b>CVPR 2025</b>.
+				</li>
+				<li class="list-group-item">
 					2025.05. GigaGAN is referred to as one of the most cited papers in 2023 by Stanford's AI Index Report (<a href="https://youtu.be/LfYotFKR0QI?si=yI98bhtVxMqlHrmg&t=161">Korean Youtube</a>)
 				</li>
 				<li class="list-group-item">
@@ -88,15 +91,15 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2024.12. I will serve as a Area Chair for <b>ICCV 2025</b> and <b>ICML 2025</b>.
 				</li>
-				<li class="list-group-item">
-					2024.11. I will serve as an Action Editor for Transactions on Machine Learning Research (<b>TMLR</b>).
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2024.11. I will serve as an Action Editor for Transactions on Machine Learning Research (<b>TMLR</b>).
+					</li>
 					<li class="list-group-item">
 						2024.11. I will serve as a Lead Area Chair for <b>CVPR 2025</b>.
 					</li>
