--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,108 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Lee_CF3_ICCV_2025">
+			<img src="publications/data/25_iccv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>CF3: Compact and Fast 3D Feature Fields</h4>
+			<p class="text-muted">
+				Hyunjoon Lee, Joonkyu Min, and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2025</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_CF3_ICCV_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_CF3_ICCV_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lee_CF3_ICCV_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Lee_CF3_ICCV_2025,<br>
+							Title={CF3: Compact and Fast 3D Feature Fields},<br>
+							Author={Hyunjoon Lee and Joonkyu Min and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Computer Vision (ICCV)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Seo_BUFFERX_ICCV_2025">
+			<img src="publications/data/25_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">BUFFER-X: Towards Zero-Shot Point Cloud Registration in Diverse Scenes</h4>
+			<p class="text-muted">
+				Minkyun Seo*, Hyungtae Lim*, Kanghee Lee, Luca Carlone, and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2025</em>
+				<br>(*Joint first authors)
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2503.07940" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Seo_BUFFERX_ICCV_2025_bibtex_button" aria-expanded="false" aria-controls="Seo_BUFFERX_ICCV_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Seo_BUFFERX_ICCV_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Seo_BUFFERX_ICCV_2025,<br>
+							Title={BUFFER-X: Towards Zero-Shot Point Cloud Registration in Diverse Scenes},<br>
+							Author={Minkyun Seo and Hyungtae Lim and Kanghee Lee and Luca Carlone and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Computer Vision (ICCV)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Shin_Exploring_ICCV_2025">
+			<img src="publications/data/25_iccv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Exploring Multimodal Diffusion Transformers for Enhanced Prompt-based Image Editing</h4>
+			<p class="text-muted">
+				Joonghyuk Shin, Alchan Hwang, Yujin Kim, Daneul Kim, and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2025</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Exploring_ICCV_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_Exploring_ICCV_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Shin_Exploring_ICCV_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Shin_Exploring_ICCV_2025,<br>
+							Title={Exploring Multimodal Diffusion Transformers for Enhanced Prompt-based Image Editing},<br>
+							Author={Joonghyuk Shin and Alchan Hwang and Yujin Kim and Daneul Kim and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Computer Vision (ICCV)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Shin_Leveraging_ECLR_2025">
+			<img src="publications/data/25_iccvws1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Leveraging Learned Image Prior for 3D Gaussian Compression</h4>
+			<p class="text-muted">
+				Seungjoo Shin, <b>Jaesik Park</b>, and Sunghyun Cho.
+				<em>Workshop on Efficient Computing under Limited Resources (ECLR) <b>ICCV workshop</b>, 2025</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Leveraging_ECLR_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_Leveraging_ECLR_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Shin_Leveraging_ECLR_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Shin_Leveraging_ECLR_2025,<br>
+							Title={Leveraging Learned Image Prior for 3D Gaussian Compression},<br>
+							Author={Seungjoo Shin and Jaesik Park and Sunghyun Cho},<br>
+							Booktitle={Proceedings of the Workshop on Efficient Computing under Limited Resources (ECLR) ICCV workshop},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Kim_MetropolisHastings_arXiv_2025">
 			<img src="publications/data/25_arxiv6.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Metropolis-Hastings Sampling for 3D Gaussian Reconstruction</h4>
@@ -114,33 +216,6 @@
 							Title={Targetless LiDAR-Camera Calibration with Anchored 3D Gaussians},<br>
 							Author={Haebeom Jung and Namtae Kim and Jungwoo Kim and Jaesik Park},<br>
 							Journal={2504.04597 (arXiv)},<br>
-							Year={2025}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Seo_BUFFERX_arXiv_2025">
-			<img src="publications/data/25_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4 class="em-tight">BUFFER-X: Towards Zero-Shot Point Cloud Registration in Diverse Scenes</h4>
-			<p class="text-muted">
-				Minkyun Seo*, Hyungtae Lim*, Kanghee Lee, Luca Carlone, and <b>Jaesik Park</b>.
-				<em>2503.07940 (arXiv), 2025</em>
-				<br>(*Joint first authors)
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2503.07940" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Seo_BUFFERX_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Seo_BUFFERX_arXiv_2025_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Seo_BUFFERX_arXiv_2025_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Seo_BUFFERX_arXiv_2025,<br>
-							Title={BUFFER-X: Towards Zero-Shot Point Cloud Registration in Diverse Scenes},<br>
-							Author={Minkyun Seo and Hyungtae Lim and Kanghee Lee and Luca Carlone and Jaesik Park},<br>
-							Journal={2503.07940 (arXiv)},<br>
 							Year={2025}<br>
 							}
 						</p>
