--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2025.06. Three papers about feature field reconstruction, 3D registration, and text-based image editing are accepted to <b>CVPR 2025</b>.
+					2025.06. Three papers about feature field reconstruction, 3D registration, and text-based image editing are accepted to <b>ICCV 2025</b>.
 				</li>
 				<li class="list-group-item">
 					2025.05. GigaGAN is referred to as one of the most cited papers in 2023 by Stanford's AI Index Report (<a href="https://youtu.be/LfYotFKR0QI?si=yI98bhtVxMqlHrmg&t=161">Korean Youtube</a>)
