--- a/data/news.html
+++ b/data/news.html
@@ -1,15 +1,15 @@
-2025.06. Three papers about feature field reconstruction, 3D registration, and prompt-based image editing are accepted to <b>ICCV 2025</b>.
+2025.06. Three papers about <a href="publications.html#Lee_CF3_ICCV_2025">feature field reconstruction</a>, <a href="publications.html#Seo_BUFFERX_ICCV_2025">3D registration</a>, and <a href="publications.html#Shin_Exploring_ICCV_2025">prompt-based image editing</a> are accepted to <b>ICCV 2025</b>.
 2025.05. GigaGAN is referred to as one of the most cited papers in 2023 by Stanford's AI Index Report (<a href="https://youtu.be/LfYotFKR0QI?si=yI98bhtVxMqlHrmg&t=161">Korean Youtube</a>)
 2025.04. Open3D is featured in <a href="https://www.oreilly.com/library/view/3d-data-science/9781098161323/" target="_blank">3D Data Science with Python</a> book published by O'Reilly Media (<a href="https://www.amazon.com/_/dp/1098161335?smid=ATVPDKIKX0DER&_encoding=UTF8&tag=oreilly20-20>" target="_blank">Buy at Amazon</a>).
-2025.02. Three papers about dynamic scene reconstruction and image generation are accepted to <b>CVPR 2025</b>.
+2025.02. Three papers about <a href="publications.html#Kim_ShowMak3r_CVPR_2025">dynamic scene reconstruction</a> and <a href="publications.html#Kim_Improving_CVPR_2025">image generation</a> are accepted to <b>CVPR 2025</b>.
 2025.02. A paper about point cloud registration is accepted to <b>ICRA 2025</b>.
-2025.01. Two papers (3D Gaussian compression & ConvNet design in 2025) are accepted to <b>ICLR 2025</b>.
+2025.01. Two papers (<a href="publications.html#Shin_Localityaware_ICLR_2025">3D Gaussian compression</a> & <a href="publications.html#Kumar_Designing_ICLR_2025">ConvNet design in 2025</a>) are accepted to <b>ICLR 2025</b>.
 2024.12. I will serve as a Area Chair for <b>ICCV 2025</b> and <b>ICML 2025</b>.
 2024.11. I will serve as an Action Editor for Transactions on Machine Learning Research (<b>TMLR</b>).
 2024.11. I will serve as a Lead Area Chair for <b>CVPR 2025</b>.
 2024.09. I will serve as an Area Chair for <b>ICLR 2025</b>.
-2024.09. A paper about brick assembly is accepted to Transactions on Machine Learning Research (<b>TMLR</b>).
-2024.09. A paper about fast drag-based image editing approach is accepted to <b>SIGGRAPH Asia 2024</b>.
+2024.09. A paper about <a href="publications.html#Ahn_BudgetAware_TMLR_2024">brick assembly</a> is accepted to Transactions on Machine Learning Research (<b>TMLR</b>).
+2024.09. A paper about <a href="publications.html#Shin_InstantDrag_SIGGRAPH_Asia_2024">fast drag-based image editing</a> is accepted to <b>SIGGRAPH Asia 2024</b>.
 2024.06. Two papers got accepted to <b>ECCV 2024</b>.
 2024.05. I will serve as a Area Chair for <b>NeurIPS 2024</b>.
 2024.05. A paper about 3D parts assembly is accepted to <b>ICML 2024</b>.
@@ -20,7 +20,7 @@
 2024.01. Our binary radiance field paper received the 30th <b>Samsung HumanTech Paper Award</b> (Silver Prize).
 2024.01. Our stereo SLAM paper has been invited to <b>ICRA 2024</b> as an <b>oral</b> presentation.
 2023.11. I will serve as a Lead Area Chair for <b>ECCV 2024</b>.
-2023.09. A paper about <a href="publications.html#Shin_Binary_arXiv_2023">compact neural radiance fields</a> is accepted to <b>NeurIPS 2023</b>.
+2023.09. A paper about <a href="publications.html#Shin_Binary_NeurIPS_2023">compact neural radiance fields</a> is accepted to <b>NeurIPS 2023</b>.
 2023.09. Our <a href="publications.html#Kang_Scaling_CVPR_2023">GigaGAN paper</a> has been featured in <a href="https://www.youtube.com/watch?v=UyoXmHS-KGc&ab_channel=TwoMinutePapers" target="_blank">Two Minutes Papers</a> YouTube channel. 
 2023.09. After spending four and half great years at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>, I joined <a href="https://cse.snu.ac.kr/" target="_blank">CSE</a> & <a href="https://gsai.snu.ac.kr/" target="_blank">GSAI</a> at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>.
 2023.09. I will serve as an Associate Editor for <b>ICRA 2024</b>.
