--- a/lab.html
+++ b/lab.html
@@ -205,7 +205,7 @@
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/minkyun.jpeg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
-			<h5>Minkyun Seo</h5>
+			<h5><a href="https://minkyunseo.github.io" target="_blank">Minkyun Seo</a></h5>
 			2025 Fall - current<br>
 			Integrated Ph.D. student<br>
 		</div>
