adding jam-flow + adding hiding option for publications

--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,33 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kwon_JAMFlow_arXiv_2025">
+			<img src="publications/data/25_arxiv7.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>JAM-Flow: Joint Audio-Motion Synthesis with Flow Matching</h4>
+			<p class="text-muted">
+				Mingi Kwon, Joonghyuk Shin, Jaeseok Jung, <b>Jaesik Park</b>, and Youngjung Uh.
+				<em>2506.23552 (arXiv), 2025</em>
+			</p>
+			<p>
+				<a href="https://joonghyuk.com/jamflow-web/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2506.23552" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kwon_JAMFlow_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Kwon_JAMFlow_arXiv_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kwon_JAMFlow_arXiv_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kwon_JAMFlow_arXiv_2025,<br>
+							Title={JAM-Flow: Joint Audio-Motion Synthesis with Flow Matching},<br>
+							Author={Mingi Kwon and Joonghyuk Shin and Jaeseok Jung and Jaesik Park and Youngjung Uh},<br>
+							Journal={2506.23552 (arXiv)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Lee_CF3_ICCV_2025">
 			<img src="publications/data/25_iccv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>CF3: Compact and Fast 3D Feature Fields</h4>
