--- a/publications.html
+++ b/publications.html
@@ -71,8 +71,9 @@
 			<img src="publications/data/25_arxiv7.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>JAM-Flow: Joint Audio-Motion Synthesis with Flow Matching</h4>
 			<p class="text-muted">
-				Mingi Kwon, Joonghyuk Shin, Jaeseok Jung, <b>Jaesik Park</b>, and Youngjung Uh.
+				Mingi Kwon*, Joonghyuk Shin*, Jaeseok Jung, <b>Jaesik Park</b>†, and Youngjung Uh†.
 				<em>2506.23552 (arXiv), 2025</em>
+				<br>(*Equal Contribution, †Equal Advising)
 			</p>
 			<p>
 				<a href="https://joonghyuk.com/jamflow-web/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
@@ -85,7 +86,7 @@
 						<p class="card-text text-start fw-lighter">
 							@article{Kwon_JAMFlow_arXiv_2025,<br>
 							Title={JAM-Flow: Joint Audio-Motion Synthesis with Flow Matching},<br>
-							Author={Mingi Kwon and Joonghyuk Shin and Jaeseok Jung and Jaesik Park and Youngjung Uh},<br>
+							Author={Mingi Kwon and Joonghyuk Shin and Jaeseok Jung and Jaesik Park† and Youngjung Uh†},<br>
 							Journal={2506.23552 (arXiv)},<br>
 							Year={2025}<br>
 							}
