--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 					2025.06. We are holding Post Doc funding for abroad PhDs. If you interested, please <a href="https://jaesik.info/contact" target="_blank">apply</a>.
 				</li>
 				<li class="list-group-item">
-					2025.06. Three papers about <a href="publications.html#Lee_CF3_ICCV_2025">feature field reconstruction</a>, <a href="publications.html#Seo_BUFFERX_ICCV_2025">3D registration</a>, and <a href="publications.html#Shin_Exploring_ICCV_2025">prompt-based image editing</a> are accepted to <b>ICCV 2025</b>.
+					2025.06. Papers about <a href="publications.html#Lee_CF3_ICCV_2025">feature field recon</a>, <a href="publications.html#Seo_BUFFERX_ICCV_2025">3D registration</a>, and <a href="publications.html#Shin_Exploring_ICCV_2025">prompt-based image editing</a> are accepted to <b>ICCV 2025</b>.
 				</li>
 				<li class="list-group-item">
 					2025.05. GigaGAN is referred to as one of the most cited papers in 2023 by Stanford's AI Index Report (<a href="https://youtu.be/LfYotFKR0QI?si=yI98bhtVxMqlHrmg&t=161">Korean Youtube</a>)
