buffer-x iccv highlight

--- a/publications.html
+++ b/publications.html
@@ -126,7 +126,7 @@
 			<p class="text-muted">
 				Minkyun Seo*, Hyungtae Lim*, Kanghee Lee, Luca Carlone, and <b>Jaesik Park</b>.
 				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2025</em>
-				<br>(*Joint first authors)
+				<br>(Accepted as a <b>highlight paper</b>, *Joint first authors)
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2503.07940" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
@@ -940,7 +940,7 @@
 			<p class="text-muted">
 				Minguk Kang, Jun-Yan Zhu, Richard Zhang, <b>Jaesik Park</b>, Eli Shechtman, Sylvain Paris, and Taesung Park.
 				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2023</em>
-				<br>(Accepted as a highlight paper (review score 5,5,5) - top 2.5% among 9,155 submissions)
+				<br>(Accepted as a <b>highlight paper</b> (review score 5,5,5) - top 2.5% among 9,155 submissions)
 			</p>
 			<p>
 				<a href="https://mingukkang.github.io/GigaGAN/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
