--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2025.07. Our <a href="publications.html#Seo_BUFFERX_ICCV_2025">BUFFER-X</a>, a paper about a tough 3D registration method, is selected as a highlight paper at <b>ICCV 2025</b>.
+				</li>
+				<li class="list-group-item">
 					2025.06. Papers about <a href="publications.html#Lee_CF3_ICCV_2025">feature field recon</a>, <a href="publications.html#Seo_BUFFERX_ICCV_2025">3D registration</a>, and <a href="publications.html#Shin_Exploring_ICCV_2025">prompt-based image editing</a> are accepted to <b>ICCV 2025</b>.
 				</li>
 				<li class="list-group-item">
@@ -88,15 +91,15 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2025.01. Two papers (<a href="publications.html#Shin_Localityaware_ICLR_2025">3D Gaussian compression</a> & <a href="publications.html#Kumar_Designing_ICLR_2025">ConvNet design in 2025</a>) are accepted to <b>ICLR 2025</b>.
 				</li>
-				<li class="list-group-item">
-					2024.12. I will serve as a Area Chair for <b>ICCV 2025</b> and <b>ICML 2025</b>.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2024.12. I will serve as a Area Chair for <b>ICCV 2025</b> and <b>ICML 2025</b>.
+					</li>
 					<li class="list-group-item">
 						2024.11. I will serve as an Action Editor for Transactions on Machine Learning Research (<b>TMLR</b>).
 					</li>
