--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2025.07. Our <a href="publications.html#Seo_BUFFERX_ICCV_2025">BUFFER-X</a>, a paper about a tough 3D registration method, is selected as a highlight paper at <b>ICCV 2025</b>.
+					2025.07. Our <a href="publications.html#Seo_BUFFERX_ICCV_2025">BUFFER-X</a>, a tough 3D registration method, is selected as a highlight paper at <b>ICCV 2025</b>.
 				</li>
 				<li class="list-group-item">
 					2025.06. Papers about <a href="publications.html#Lee_CF3_ICCV_2025">feature field recon</a>, <a href="publications.html#Seo_BUFFERX_ICCV_2025">3D registration</a>, and <a href="publications.html#Shin_Exploring_ICCV_2025">prompt-based image editing</a> are accepted to <b>ICCV 2025</b>.
