adding github attr. for buffer-x

--- a/publications.html
+++ b/publications.html
@@ -127,6 +127,7 @@
 				Minkyun Seo*, Hyungtae Lim*, Kanghee Lee, Luca Carlone, and <b>Jaesik Park</b>.
 				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2025</em>
 				<br>(Accepted as a <b>highlight paper</b>, *Joint first authors)
+				<br><a class="github-button" href="https://github.com/MIT-SPARK/BUFFER-X" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star MIT-SPARK/BUFFER-X on GitHub">Star</a><a class="github-button" href="https://github.com/MIT-SPARK/BUFFER-X/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork MIT-SPARK/BUFFER-X on GitHub">Fork</a>
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2503.07940" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
