adding humantech awared to fast point transformer

--- a/publications.html
+++ b/publications.html
@@ -1438,6 +1438,7 @@
 			<p class="text-muted">
 				Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and <b>Jaesik Park</b>.
 				<em>Int. Conf. on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</em>
+				<br>(Received 28th <b>HumanTech Paper Award (Silver Prize)</b>, Samsung Electronics Corp.)
 				<br><a class="github-button" href="https://github.com/POSTECH-CVLab/FastPointTransformer" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/FastPointTransformer on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/FastPointTransformer/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/FastPointTransformer on GitHub">Fork</a>
 			</p>
 			<p>
