adding minji seo to lab members

--- a/lab.html
+++ b/lab.html
@@ -112,6 +112,12 @@
 			Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
+			<img src="source/members/minji.jpg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
+			<h5><a href="https://scholar.google.com/citations?user=DsPmRBwAAAAJ&hl=ko" target="_blank">Minji Seo</a></h5>
+			2021 Fall - current<br>
+			Ph.D. student<br>
+		</div>
+		<div class="col-md-3 text-center">
 			<img src="source/members/ganghee.jpeg" class="rounded-circle img-thumbnail shadow mb-3 d-none d-md-block">
 			<h5><a href="https://scholar.google.com/citations?user=s-haNkwAAAAJ" target="_blank">Kanghee Lee</a></h5>
 			2023 Fall - current<br>
