adding jaeyoon's webpage

--- a/lab.html
+++ b/lab.html
@@ -114,7 +114,7 @@
 		<div class="col-md-2 text-center">
 			<img src="source/members/minji.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://scholar.google.com/citations?user=DsPmRBwAAAAJ&hl=ko" target="_blank">Minji Seo</a></h5>
-			2021 Fall - current<br>
+			2025 Fall - current<br>
 			Ph.D. student<br>
 		</div>
 		<div class="col-md-2 text-center">
@@ -217,7 +217,7 @@
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/jaeyun.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
-			<h5>Jaeyun Jung</h5>
+			<h5><a href="https://cubec.link/" target="_blank">Jaeyun Jung</a></h5>
 			2025 Fall - current<br>
 			Master's student<br>
 		</div>
