--- a/source/html/lab_skeleton.html
+++ b/source/html/lab_skeleton.html
@@ -12,6 +12,13 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
+						<img src="source\lab_pics\2025_08_05.jpg" class="d-block w-100 img-thumbnail">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>2025.08.05</h5>
+							<p>Attended the KCCV conference, which was full of passionate discussions.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
 						<img src="source\lab_pics\2025_04_11.jpg" class="d-block w-100 img-thumbnail">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>2025.04.11</h5>
