--- a/lab.html
+++ b/lab.html
@@ -121,8 +121,8 @@
 		<div class="col-md-2 text-center">
 			<img src="source/members/minji.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://scholar.google.com/citations?user=DsPmRBwAAAAJ&hl=ko" target="_blank">Minji Seo</a></h5>
-			2025 Fall - current<br>
-			Ph.D. student<br>
+			2021 Fall - current<br>
+			Ph.D. student (transferred)<br>
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/ganghee.jpeg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
