--- a/publications.html
+++ b/publications.html
@@ -132,6 +132,7 @@
 				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2025</em>
 			</p>
 			<p>
+				<a href="https://www.arxiv.org/abs/2508.05254" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_CF3_ICCV_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_CF3_ICCV_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Lee_CF3_ICCV_2025_bibtex_button">
@@ -157,6 +158,7 @@
 				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2025</em>
 			</p>
 			<p>
+				<a href="https://arxiv.org/abs/2508.07519" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Exploring_ICCV_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_Exploring_ICCV_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Shin_Exploring_ICCV_2025_bibtex_button">
