unhide videogen paper

--- a/publications.html
+++ b/publications.html
@@ -132,6 +132,7 @@
 				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2025</em>
 			</p>
 			<p>
+				<a href="https://jjoonii.github.io/cf3-website/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://www.arxiv.org/abs/2508.05254" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_CF3_ICCV_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_CF3_ICCV_2025_bibtex_button">BibTeX</a>
 			</p>
@@ -221,6 +222,33 @@
 							Title={Metropolis-Hastings Sampling for 3D Gaussian Reconstruction},<br>
 							Author={Hyunjin Kim and Haebeom Jung and Jaesik Park},<br>
 							Journal={2506.12945 (arXiv)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Kim_Subjectdriven_arXiv_2025">
+			<img src="publications/data/25_arxiv5.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Subject-driven Video Generation via Disentangled Identity and Motion</h4>
+			<p class="text-muted">
+				Daneul Kim, Jingxu Zhang, Wonjoon Jin, Sunghyun Cho, Qi Dai, <b>Jaesik Park</b>, and Chong Luo.
+				<em>2504.17816 (arXiv), 2025</em>
+			</p>
+			<p>
+				<a href="https://carpedkm.github.io/projects/disentangled_sub" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2504.17816" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Subjectdriven_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_Subjectdriven_arXiv_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_Subjectdriven_arXiv_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kim_Subjectdriven_arXiv_2025,<br>
+							Title={Subject-driven Video Generation via Disentangled Identity and Motion},<br>
+							Author={Daneul Kim and Jingxu Zhang and Wonjoon Jin and Sunghyun Cho and Qi Dai and Jaesik Park and Chong Luo},<br>
+							Journal={2504.17816 (arXiv)},<br>
 							Year={2025}<br>
 							}
 						</p>
