update daeun's pic

--- a/lab.html
+++ b/lab.html
@@ -211,7 +211,7 @@
 			Master's student<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/daeun.jpeg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
+			<img src="source/members/daeun.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5>Daeun Lee</h5>
 			2025 Spring - current<br>
 			Master's student<br>
