hiring post docs

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="collapse" id="bio">
 				<ul class="list-group shadow-sm">
 					<li class="list-group-item">
-Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target="_blank">Computer Science Engineering</a> and an <a href="https://gsai.snu.ac.kr/" target="_blank">Interdisciplinary Program in AI</a> at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>. He received his Bachelor’s degree from <a href="https://www.hanyang.ac.kr/web/eng" target="_blank">Hanyang University</a>, and he received his Master’s and Ph.D. degrees from <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a> (supervised by <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en&oi=ao" target="_blank">Prof. Yu-Wing Tai</a> and <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en&oi=ao" target="_blank">Prof. In So Kweon</a>). He was a staff research scientist at <a href="https://www.intel.com/" target="_blank">Intel</a> intelligent systems lab (led by <a href="http://vladlen.info/" target="_blank">Dr. Vladlen Koltun</a>), where he co-created <a href="http://open3d.org/" target="_blank">Open3D library</a>. Before joining Seoul National University, he was a faculty member at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>. His research interests include text-to-image synthesis, 3D perception, and computer vision topics. He serves as a program committee at prestigious international conferences, such as CVPR, ECCV, ICCV, ICLR, ICML, ICRA, NeurIPS and SIGGRAPH Asia.					</li>
+Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target="_blank">Computer Science Engineering</a> and an <a href="https://gsai.snu.ac.kr/" target="_blank">Interdisciplinary Program in AI</a> at <a href="https://en.snu.ac.kr/" target="_blank">Seoul National University</a>. He received his Bachelor’s degree from <a href="https://www.hanyang.ac.kr/web/eng" target="_blank">Hanyang University</a>, and he received his Master’s and Ph.D. degrees from <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a> (supervised by <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en&oi=ao" target="_blank">Prof. Yu-Wing Tai</a> and <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en&oi=ao" target="_blank">Prof. In So Kweon</a>). He was a staff research scientist at <a href="https://www.intel.com/" target="_blank">Intel</a> intelligent systems lab (led by <a href="http://vladlen.info/" target="_blank">Dr. Vladlen Koltun</a>), where he co-created <a href="http://open3d.org/" target="_blank">Open3D library</a>. Before joining Seoul National University, he was a faculty member at <a href="https://postech.ac.kr/eng/" target="_blank">POSTECH</a>. His research interests include text-to-image synthesis, 3D perception, and computer vision topics. He serves as a program committee at prestigious international conferences, such as CVPR, ECCV, ICCV, ICLR, ICML, ICRA, NeurIPS and SIGGRAPH Asia.					</li>
 					<li class="list-group-item">
 						<img src = "data/file-down.svg" width="32" height="32"><a href="cv_jaesik_park.pdf" target="_blank">cv_jaesik_park.pdf</a>
 					</li>
@@ -70,6 +70,9 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<p></p>
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
+				<li class="list-group-item active">
+					🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-dark btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
+				</li>
 				<li class="list-group-item">
 					2025.07. Our <a href="publications.html#Seo_BUFFERX_ICCV_2025">BUFFER-X</a>, a tough 3D registration method, is selected as a highlight paper at <b>ICCV 2025</b>.
 				</li>
@@ -88,15 +91,15 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2025.02. A paper about point cloud registration is accepted to <b>ICRA 2025</b>.
 				</li>
-				<li class="list-group-item">
-					2025.01. Two papers (<a href="publications.html#Shin_Localityaware_ICLR_2025">3D Gaussian compression</a> & <a href="publications.html#Kumar_Designing_ICLR_2025">ConvNet design in 2025</a>) are accepted to <b>ICLR 2025</b>.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2025.01. Two papers (<a href="publications.html#Shin_Localityaware_ICLR_2025">3D Gaussian compression</a> & <a href="publications.html#Kumar_Designing_ICLR_2025">ConvNet design in 2025</a>) are accepted to <b>ICLR 2025</b>.
+					</li>
 					<li class="list-group-item">
 						2024.12. I will serve as a Area Chair for <b>ICCV 2025</b> and <b>ICML 2025</b>.
 					</li>
