--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item active">
-					🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-dark btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
+					🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-light btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
 				</li>
 				<li class="list-group-item">
 					2025.07. Our <a href="publications.html#Seo_BUFFERX_ICCV_2025">BUFFER-X</a>, a tough 3D registration method, is selected as a highlight paper at <b>ICCV 2025</b>.
