adding Eun Sun Lee

--- a/lab.html
+++ b/lab.html
@@ -113,6 +113,12 @@
 		</div>
 		<h3>Members</h3>
 		<div class="col-md-2 text-center">
+			<img src="source/members/eunsun.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
+			<h5><a href="https://eunsunlee.github.io/" target="_blank">Eun Sun Lee</a></h5>
+			2025 Fall - current<br>
+			Post. Doc. Researcher<br>
+		</div>
+		<div class="col-md-2 text-center">
 			<img src="source/members/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5><a href="https://scholar.google.com/citations?user=ZqM8_24AAAAJ" target="_blank">Kwonyoung Ryu</a></h5>
 			2021 Spring - current<br>
