adding tree-guided diffusion planner

--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,33 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Jeon_Treeguided_arXiv_2025">
+			<img src="publications/data/25_arxiv8.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Tree-guided Diffusion Planner</h4>
+			<p class="text-muted">
+				Hyeonseong Jeon, Cheolhong Min, and <b>Jaesik Park</b>.
+				<em>2508.21800 (arXiv), 2025</em>
+			</p>
+			<p>
+				<a href="https://tree-diffusion-planner.github.io" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2508.21800" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jeon_Treeguided_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Jeon_Treeguided_arXiv_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Jeon_Treeguided_arXiv_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Jeon_Treeguided_arXiv_2025,<br>
+							Title={Tree-guided Diffusion Planner},<br>
+							Author={Hyeonseong Jeon and Cheolhong Min and Jaesik Park},<br>
+							Journal={2508.21800 (arXiv)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Kwon_JAMFlow_arXiv_2025">
 			<img src="publications/data/25_arxiv7.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>JAM-Flow: Joint Audio-Motion Synthesis with Flow Matching</h4>
