--- a/publications.html
+++ b/publications.html
@@ -157,7 +157,7 @@
 			<p class="text-muted">
 				Hyunjoon Lee, Joonkyu Min, and <b>Jaesik Park</b>.
 				<em>Int. Conf. on Computer Vision (<b>ICCV</b>), 2025</em>
-				<br>(Also presented at <b>ICCV 2025 demonstrations track</b>)
+				<br>(Also accepted at <b>ICCV 2025 demonstrations track</b>)
 			</p>
 			<p>
 				<a href="https://jjoonii.github.io/cf3-website/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
